hphp/hack/test/typecheck/lambda/curried.php.like_types.exp
File "curried.php", line 19, characters 57-58:
Invalid argument (Typing[4323])
File "curried.php", line 10, characters 36-37:
Some type constraint(s) are violated here
File "curried.php", line 10, characters 36-37:
T2 is a constrained type parameter
File "curried.php", line 4, characters 14-19:
Expected string
File "curried.php", line 10, characters 36-37:
But got dynamic
File "curried.php", line 19, characters 44-59:
This comparison has invalid types.  Only comparisons in which both arguments are strings, nums, DateTime, or DateTimeImmutable are allowed (Typing[4240])
File "curried.php", line 19, characters 30-31:
This is some value because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "curried.php", line 19, characters 49-59:
This is an int because this is the result of an integer arithmetic operation
